<?xml version='1.0' encoding='UTF-8'?>
<resources>
  <string name="act_action_accept_accept">Accept</string>
  <string name="act_action_accept_mute">Mute messages</string>
  <string name="act_action_accept_reject">Block messages</string>
  <string name="act_action_mute_accept">Mute calls</string>
  <string name="act_action_mute_mute">Mute calls and messages</string>
  <string name="act_action_mute_reject">Mute calls and monitor messages</string>
  <string name="act_action_reject_accept">Monitor calls</string>
  <string name="act_action_reject_mute">Monitor calls and mute messages</string>
  <string name="act_action_reject_reject">Monitor incoming calls and messages</string>
  <string name="act_call">Log calls</string>
  <string name="act_del_ms">"Don't display"</string>
  <string name="act_del_ms_summary">Rejected messages will not be displayed</string>
  <string name="act_hangup_call">Hang up immediately</string>
  <string name="act_hangup_call_summary">Rejected calls will not be displayed in the call log</string>
  <string name="act_ignore_call">"Don't log calls"</string>
  <string name="act_ignore_ms">Ignore notifications</string>
  <string name="act_ms">Log messages</string>
  <string name="act_mute_call">Mute calls</string>
  <string name="act_mute_call_summary">Calls will not display notifications but will still be logged to the call log</string>
  <string name="act_mute_ms">Mute notifications</string>
  <string name="act_mute_ms_summary">Notifications are disabled but messages will still be viewable</string>
  <string name="add_blacklist">Add to blacklist</string>
  <string name="add_button">Add</string>
  <string name="add_whitelist">Add to whitelist</string>
  <string name="anti_private_summary">Intercept and block private or withheld numbers and log them</string>
  <string name="anti_private_title">Block private numbers</string>
  <string name="anti_stranger_summary">Contacts not in address book are filtered</string>
  <string name="anti_stranger_title">Anti-stranger mode</string>
  <string name="app_name">Anti-Spam</string>
  <string name="black_white_list_tab_title">Filters</string>
  <string name="blacklist_tab_title">Black list</string>
  <string name="call_log_tab_title">Call log</string>
  <string name="calllog">Call log</string>
  <string name="cancel_button">Cancel</string>
  <string name="check_all">Select all</string>
  <string name="check_nothing">Deselect all</string>
  <string name="clear_all_calllog">Clear call log</string>
  <string name="clear_all_mslog">Clear message log</string>
  <string name="close_rule">Disable firewall rules</string>
  <string name="confirm">OK</string>
  <string name="confirm_clear_blacklist">Are you sure to clear the blacklist?</string>
  <string name="confirm_clear_whitelist">Are you sure to clear the whitelist?</string>
  <string name="context_add_contact">Add to existing contact</string>
  <string name="context_call">Call</string>
  <string name="context_ms">Send SMS</string>
  <string name="context_new_contact">New contact</string>
  <string name="edit_blacklist">Edit note</string>
  <string name="edit_whitelist">Edit note</string>
  <string name="emptylist_fwlog_call">All blocked calls will be logged here.</string>
  <string name="emptylist_fwlog_ms">All blocked SMS and MMS messages will be logged here.</string>
  <string name="enable_firewall">Enable firewall</string>
  <string name="firewall_action">Blocking operation</string>
  <string name="firewall_log">Firewall log</string>
  <string name="firewall_settings">DND settings</string>
  <string name="firewall_settings_tab_title">Rules</string>
  <string name="fw_action_settings">Firewall settings</string>
  <string name="fw_add_keyword">Add keyword</string>
  <string name="fw_add_keyword_existing">Keyword: %s already defined</string>
  <string name="fw_add_list_title">Input phone number</string>
  <string name="fw_advanced_settings">Advanced settings</string>
  <string name="fw_all_day">Daily</string>
  <string name="fw_blacklist">Blacklist</string>
  <string name="fw_blacklist_hint">Calls and messages will be blocked by default</string>
  <string name="fw_blocked">Blocked stats</string>
  <string formatted="false" name="fw_blocked_count">Intercepted:%dCalls and %dMessages</string>
  <string formatted="false" name="fw_call">Call time: %s (%d)</string>
  <string name="fw_call_imported">Import Calllog</string>
  <string name="fw_call_muted">Calls Muted</string>
  <string name="fw_call_rejected">Calls Rejected</string>
  <string name="fw_clear_all_keyword">Clear all keywords</string>
  <string name="fw_clear_blacklist">Clear blacklist</string>
  <string name="fw_clear_whitelist">Clear whitelist</string>
  <string name="fw_edit_keyword">Edit keyword</string>
  <string name="fw_end_time">End time</string>
  <string name="fw_import_blacklist">Import blacklist</string>
  <string name="fw_import_blacklist_confirm">%d numbers are selected, are you sure to import into blacklist?</string>
  <string name="fw_import_ms">Import all Call log and Messages</string>
  <string name="fw_import_whitelist">Import whitelist</string>
  <string name="fw_import_whitelist_confirm">%d numbers are selected, are you sure to import into whitelist?</string>
  <string name="fw_in_blacklist">Number: %s is already in the blacklist</string>
  <string name="fw_in_whitelist">Number: %s is already in the whitelist</string>
  <string name="fw_keyword_filter">Spam keyword filter</string>
  <string name="fw_keyword_filter_summary">Filter messages which match selected keywords</string>
  <string name="fw_keyword_list">Keyword list</string>
  <string name="fw_keyword_list_hint">Keywords entered here will be used to block incoming messages</string>
  <string name="fw_log_inf">Log</string>
  <string name="fw_menu_new_blacklist_title">Add to blacklist</string>
  <string name="fw_menu_new_manual">Enter number manually</string>
  <string name="fw_menu_new_whitelist_title">Add to whitelist</string>
  <string name="fw_menu_pick_from_contact">Select from contacts</string>
  <string name="fw_menu_remove">Delete</string>
  <string formatted="false" name="fw_ms">Message time: %s (%d)</string>
  <string name="fw_ms_filtered">Messages Filtered</string>
  <string name="fw_ms_imported">Import Messages</string>
  <string name="fw_ms_muted">Messages Muted</string>
  <string name="fw_ms_rejected">Messages Rejected</string>
  <string name="fw_no_effect">Guard Mode is not enabled. Do you want to enable it?</string>
  <string name="fw_notes_hint">Note (optional)</string>
  <string name="fw_notification_settings">Notification settings</string>
  <string name="fw_on">DND enabled</string>
  <string name="fw_period">Define blocking duration</string>
  <string name="fw_restore_ms">Restore messages</string>
  <string name="fw_set_keyword">Configure keyword filter</string>
  <string name="fw_start_time">Start time</string>
  <string name="fw_time_settings">Blocking schedule</string>
  <string name="fw_whitelist">Whitelist</string>
  <string name="fw_whitelist_hint">Calls and messages will not be blocked by default</string>
  <string name="log_count">(%d)</string>
  <string formatted="false" name="member_firewall_log">Blocked: Number%d, details%d</string>
  <string name="menu_edit">Edit</string>
  <string name="mms_log_tab_title">Message log</string>
  <string name="new_bw_list_button">Add contacts</string>
  <string name="no">Cancel</string>
  <string name="number_add_hint">Input number to add to blacklist</string>
  <string name="opt_accept_whitelist">Accept from whitelist</string>
  <string name="opt_reject_all">Reject all</string>
  <string name="opt_reject_blacklist">Reject from blacklist</string>
  <string name="opt_reject_blacklist_stranger">Reject unknown calls</string>
  <string name="opt_reject_blacklist_stranger_summary">Calls will be rejected from blacklist but allowed from whitelist</string>
  <string name="remove">Delete</string>
  <string name="remove_all_keywords">Are you sure you want to delete all keywords?</string>
  <string name="remove_call_log">Are you sure you want to delete all call logs?</string>
  <string name="remove_contact">Are you sure you want to delete this contact?</string>
  <string name="remove_delete">Delete</string>
  <string name="remove_inf">Are you sure you want to delete this record?</string>
  <string name="remove_keyword">Are you sure you want to delete this keyword?</string>
  <string name="remove_sms">Are you sure you want to delete all sms logs?</string>
  <string name="save_button">Save</string>
  <string name="show_firewall_notification">Show firewall notifications</string>
  <string name="show_notification">Show notifications</string>
  <string name="whitelist_tab_title">White list</string>
</resources>
